2013-01-02 Eitan Adler <lists@eitanadler.com>
        * configure.ac: Remove unnecessary checks
        * src/nano.h, NEWS: Fix redundant wording

2012-12-31 Chris Allegretta <chrisa@asty.org>
        * src/*: Introduce (basic) vim-style file locks.  Does not allow vim to recover
          our changes, and just lets a vim user know we're editing a file.  Commands line "-G" 
          or "--locking", nanorc option "locking".  New functions 
          src/files.c:do_lockfile(), write_lockfile(), and delete_lockfile().

2012-02-05 Chris Allegretta <chrisa@asty.org>
	* src/*: Fix overlapping strings highlighting each other.  new variables in edit_draw 
	  (slmatcharray, pbegin, paintok), new logic (with repeated setting od values in the 
	  array but its BFI after all).  FIXME: Need to create a new 'overlap'
	* src/*: Fix a silly issue with the argument to nregcomp, as it's confusing to the caller
	* src/nano.h: Change the color types to a compiler macro (COLORWIDTH), may not actually 
	  even be worth doing, but someday who knows how wide a color curses implementation might 
	  be, and maybe we'll even start checking for it in autoconf!

GNU nano 2.3.1 - 2011.05.10
2011-05-10 Chris Allegretta <chrisa@asty.org>
        * text.c (do_enter): Only increment totsize by the auto-indented amount, size the previous line's size was
	  already counted.  Fixes bug reported by Robert Spanjaard.

2011-05-08 Chris Allegretta <chrisa@asty.org>
	* doc/syntax/Makefile.am: Finally get around to sorting the syntax file list

2011-05-08 Matthew Wild <mattj100@Savannah>
	* doc/syntax/spec.nanorc: New lua syntax highlighting config

2011-03-28 Asterios Dramis <asterios.dramis@gmail.com>
	* doc/syntax/spec.nanorc: New RPM spec file highlighting config

2011-03-12 Chris Allegretta <chrisa@asty.org>
	* po/*: Sync latest translation fixes, add an update_linguas.sh script.  Rename
	  existing update.pl to update_sources.pl to make it more specific.
      